about/article.css
.background {
    position: fixed;
    z-index: -1000;
    width: 100%;
    height: 100%;
    background: rgb(0, 18, 27);
    background: linear-gradient(0deg, rgb(0, 13, 19) 0%, rgb(0, 29, 33) 100%);
}

.panel {
    max-width: 1280px;
    line-height: 1.2;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 0;
    margin: auto;
}

.bordered {
    border: 2px dashed rgb(87, 87, 8);
}

@media(max-width: 1080px) {
    .panel {
        padding: 1em;
    }
}

